<?xml version="1.0" encoding="utf-8"?>
        <ScrollView
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            tools:context=".MainActivity"
            android:layout_height="match_parent"
            android:layout_width="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            tools:context=".MainActivity">

            <EditText
                android:id="@+id/editTextTextPersonName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textCapWords"
                android:hint="@string/enter_your_name"/>

            <TextView
                style="@style/HeaderTextStyle"
                android:text="@string/toppings"
                android:padding="12dp"/>
            <CheckBox
                android:id="@+id/checkbox2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/wipped_cream"
                android:paddingLeft="24dp"
                android:textSize="16sp"/>


            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="24dp"
                android:text="@string/chocolate"
                android:textSize="16sp"
                android:id="@+id/checkbox3"/>

            <TextView
                android:text="@string/quantity"
                style="@style/HeaderTextStyle"
                android:padding="12dp"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="12dp">

            <Button
                android:id="@+id/button"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:text="+"
                android:onClick="increment"
                />

                <TextView
                    android:id="@+id/quantity_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/__2"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:paddingLeft="8dp"
                    android:paddingRight="8dp"
                    />

                <Button
                    android:id="@+id/button3"
                    android:layout_width="48dp"

                    android:layout_height="48dp"
                    android:onClick="decrement"
                    android:text="-" />
            </LinearLayout>
            <Button
                android:id="@+id/button2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/order"
                android:onClick="submitOrder"
                android:textAllCaps="true"

                />

        </LinearLayout>
        </ScrollView>